# oxandi

./: Cargo.toml
data/shaders/: basic.frag  basic.vert  basic_2.frag  skinned.vert  triangle.vert
src/: main.rs
src/gltf_loader/: mod.rs
src/specs_systems/: common.rs  light.rs  mesh.rs  mod.rs  spatial.rs
