[package]
name = "oxandi"
version = "0.1.0"
authors = ["Forest Sharp <forestcollinssharp@gmail.com>"]
edition = "2018"

[features]
vulkan = ["rendy/vulkan"]
dx12 = ["rendy/dx12"]
metal = ["rendy/metal"]
empty = ["rendy/empty"]

[dependencies]
derive_deref = "1.1.0"
log = "0.4"
env_logger = "0.6"
nalgebra-glm = "0.4"
lazy_static = "1.0"
failure = "0.1"
specs = "0.15.1"
specs-derive = "0.4.0"
rhai = "0.9.1"
num = "0.2.0"
gltf = "0.14.0"

[dependencies.rendy]
optional = true
version = "0.5.1"
features = ["texture-image", "shader-compiler", "spirv-reflection", "init", "init-winit"]